fix: content header should wrap on small devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,10 +38,6 @@
 @import "styles/input";
 @import "styles/dropdown";
 
-.table td {
-  font-size: 14px;
-}
-
 .form-control.ng-invalid.ng-touched {
   border-color: red;
 }
