--- a/src/styles/_table.scss
+++ b/src/styles/_table.scss
@@ -1,3 +1,7 @@
+.table td {
+  font-size: 14px;
+}
+
 .table.table-block-sm {
   tr.no-data {
     td {
